Add Focus Setting, Focus Manager, and Focus View
- Implemented FocusSetting dialog for configuring Pomodoro timer settings including work duration, short break, long break, and rounds before long break.
- Created FocusManager service to manage focus sessions, including starting, pausing, resuming, and stopping focus intervals, as well as handling session state restoration and item suggestions.
- Developed Focus view to display current task, timer, and control buttons for managing focus sessions, including start, pause, stop, and skip break functionalities.
- Integrated settings binding for auto-suggest feature and ensured proper UI updates based on focus state changes.

--- a/core/meson.build
+++ b/core/meson.build
@@ -124,6 +124,7 @@ core_files = files(
     'Objects/Filters/Tomorrow.vala',
     'Objects/Filters/Anytime.vala',
     'Objects/Filters/Repeating.vala',
+    'Objects/Filters/Focus.vala',
     'Objects/Filters/Unlabeled.vala',
     'Objects/Filters/FilterItem.vala',
     'Objects/Filters/AllItems.vala'
