Add BluPlan Focus GNOME Shell Extension
- Implemented main extension logic in extension.js to manage the panel button and DBus client.
- Created installation script install.sh for easy setup of the extension.
- Defined metadata for the extension in metadata.json, including name, description, and supported GNOME Shell versions.
- Developed panel button UI in panelButton.js to display timer and task status.
- Added preferences UI in prefs.js to allow users to customize extension settings.
- Compiled GSettings schema in schemas/org.gnome.shell.extensions.bluplan-focus.gschema.xml for managing user preferences.
- Implemented settings management in settingsManager.js to handle GSettings interactions.
- Added CSS styles in stylesheet.css for the extension's UI components.
- Created test script test-extension.sh to validate extension structure, GSettings schema, JavaScript syntax, and documentation completeness.

--- a/data/meson.build
+++ b/data/meson.build
@@ -47,4 +47,17 @@ if compile_schemas.found()
   )
 endif
 
+# D-Bus Service
+dbus_conf = configuration_data()
+dbus_conf.set('app_id', application_id)
+dbus_conf.set('bindir', bindir)
+
+configure_file(
+  input: 'io.github.lab_gek.bluplan.service.in',
+  output: '@0@.service'.format(application_id),
+  configuration: dbus_conf,
+  install: true,
+  install_dir: datadir / 'dbus-1' / 'services'
+)
+
 subdir('icons')
